# gpd_ros

./: CMakeLists.txt  README.md  package.xml
include/gpd_ros/: grasp_detection_node.h  grasp_detection_server.h  grasp_messages.h  grasp_plotter.h
launch/: ur5.launch
msg/: CloudIndexed.msg  CloudSamples.msg  GraspConfig.msg  GraspConfigList.msg
src/gpd_ros/: grasp_detection_node.cpp  grasp_detection_server.cpp  grasp_messages.cpp  grasp_plotter.cpp
srv/: detect_grasps.srv
