<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE package>
<package format="2">
  <name>gpd_ros</name>
  <version>0.0.0</version>
  <description>
    wrapper around the GPD package for detecting 6-DOF grasp poses for a
    2-finger robot hand (e.g. a parallel jaw gripper) in 3D point clouds.
  </description>

  <maintainer email="ur5@todo.todo">ur5</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <build_depend>message_generation</build_depend>

  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
</package>
